# dummyLibraryCMakePackage

./: CMakeLists.txt  library.c  library.h  runner.c  version.h.in
cdummy/: CDummy.c  CDummy.h  CMakeLists.txt
cmake/: CDummyConfig.cmake  cdummyConfig.cmake
